TFP-3865: Skiller regler og modell, laget fordelingsmodell