@@ -4,7 +4,12 @@ import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.util.List;
+import java.util.Arrays;
+
+import no.nav.folketrygdloven.beregningsgrunnlag.fordel.OmfordelFraArbeid;
+import no.nav.folketrygdloven.beregningsgrunnlag.fordel.modell.FordelAndelModell;
+
+import no.nav.folketrygdloven.beregningsgrunnlag.fordel.modell.FordelPeriodeModell;
 
 import org.junit.jupiter.api.Test;
 
@@ -12,9 +17,6 @@ import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.AktivitetStatus;
 import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.Periode;
 import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.grunnlag.inntekt.Arbeidsforhold;
 import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.grunnlag.inntekt.Inntektskategori;
-import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.resultat.BeregningsgrunnlagPeriode;
-import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.resultat.BeregningsgrunnlagPrArbeidsforhold;
-import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.resultat.BeregningsgrunnlagPrStatus;
 
 public class OmfordelFraArbeidTest {
 
@@ -26,205 +28,170 @@ public class OmfordelFraArbeidTest {
     @Test
     void skal_omfordele_inntekt_før_naturalytelse() {
         // Arrange
-        BeregningsgrunnlagPrArbeidsforhold aktivitet = BeregningsgrunnlagPrArbeidsforhold.builder()
+        var aktivitet = FordelAndelModell.builder()
             .medGjeldendeRefusjonPrÅr(BigDecimal.valueOf(100_000))
             .medAndelNr(1L)
             .medArbeidsforhold(Arbeidsforhold.nyttArbeidsforholdHosVirksomhet(ORGNR1, null))
             .medFordeltPrÅr(BigDecimal.valueOf(50_000))
-            .build();
-        BeregningsgrunnlagPrArbeidsforhold arbeidMedBortfaltNatYtelsePrÅr = BeregningsgrunnlagPrArbeidsforhold.builder()
+	        .medAktivitetStatus(AktivitetStatus.AT)
+	        .build();
+	    var arbeidMedBortfaltNatYtelsePrÅr = FordelAndelModell.builder()
             .medNaturalytelseBortfaltPrÅr(BigDecimal.valueOf(50_000))
             .medAndelNr(2L)
-            .medBeregnetPrÅr(BigDecimal.valueOf(50_000))
+            .medForeslåttPrÅr(BigDecimal.valueOf(50_000))
+		    .medAktivitetStatus(AktivitetStatus.AT)
             .medArbeidsforhold(Arbeidsforhold.nyttArbeidsforholdHosVirksomhet(ORGNR2, null))
             .build();
-        BeregningsgrunnlagPeriode periode = BeregningsgrunnlagPeriode.builder()
-            .medPeriode(Periode.of(LocalDate.now(), LocalDate.now().plusMonths(1)))
-            .medBeregningsgrunnlagPrStatus(BeregningsgrunnlagPrStatus.builder()
-                .medAktivitetStatus(AktivitetStatus.ATFL)
-                .medArbeidsforhold(arbeidMedBortfaltNatYtelsePrÅr)
-                .medArbeidsforhold(aktivitet)
-                .build())
-            .build();
 
-        // Act
+	    var periode = new FordelPeriodeModell(Periode.of(STP, null), Arrays.asList(aktivitet, arbeidMedBortfaltNatYtelsePrÅr));
+
+	    // Act
         kjørRegel(aktivitet, periode);
 
         // Assert
-        assertThat(arbeidMedBortfaltNatYtelsePrÅr.getNaturalytelseBortfaltPrÅr().get()).isEqualTo(BigDecimal.valueOf(50_000));
-        assertThat(arbeidMedBortfaltNatYtelsePrÅr.getFordeltPrÅr()).isEqualTo(BigDecimal.ZERO);
-        assertThat(aktivitet.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.valueOf(100_000));
+        assertThat(arbeidMedBortfaltNatYtelsePrÅr.getNaturalytelseBortfaltPrÅr().orElseThrow()).isEqualTo(BigDecimal.valueOf(50_000));
+        assertThat(arbeidMedBortfaltNatYtelsePrÅr.getFordeltPrÅr().orElseThrow()).isEqualTo(BigDecimal.ZERO);
+        assertThat(aktivitet.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.valueOf(100_000));
     }
 
     @Test
     void skal_omfordele_både_inntekt_og_naturalytelse() {
         // Arrange
-        BeregningsgrunnlagPrArbeidsforhold aktivitet = BeregningsgrunnlagPrArbeidsforhold.builder()
+        var aktivitet = FordelAndelModell.builder()
             .medGjeldendeRefusjonPrÅr(BigDecimal.valueOf(150_000))
             .medAndelNr(1L)
             .medArbeidsforhold(Arbeidsforhold.nyttArbeidsforholdHosVirksomhet(ORGNR1, null))
-            .medFordeltPrÅr(BigDecimal.valueOf(50_000))
+	        .medAktivitetStatus(AktivitetStatus.AT)
+	        .medFordeltPrÅr(BigDecimal.valueOf(50_000))
             .build();
-        BeregningsgrunnlagPrArbeidsforhold arbeidMedBortfaltNatYtelsePrÅr = BeregningsgrunnlagPrArbeidsforhold.builder()
+        var arbeidMedBortfaltNatYtelsePrÅr = FordelAndelModell.builder()
             .medNaturalytelseBortfaltPrÅr(BigDecimal.valueOf(50_000))
             .medAndelNr(2L)
-            .medBeregnetPrÅr(BigDecimal.valueOf(50_000))
+            .medForeslåttPrÅr(BigDecimal.valueOf(50_000))
             .medArbeidsforhold(Arbeidsforhold.nyttArbeidsforholdHosVirksomhet(ORGNR2, null))
-            .build();
-        BeregningsgrunnlagPeriode periode = BeregningsgrunnlagPeriode.builder()
-            .medPeriode(Periode.of(LocalDate.now(), LocalDate.now().plusMonths(1)))
-            .medBeregningsgrunnlagPrStatus(BeregningsgrunnlagPrStatus.builder()
-                .medAktivitetStatus(AktivitetStatus.ATFL)
-                .medArbeidsforhold(arbeidMedBortfaltNatYtelsePrÅr)
-                .medArbeidsforhold(aktivitet)
-                .build())
-            .build();
+	        .medAktivitetStatus(AktivitetStatus.AT)
+	        .build();
+
+	    var periode = new FordelPeriodeModell(Periode.of(STP, null), Arrays.asList(aktivitet, arbeidMedBortfaltNatYtelsePrÅr));
 
         // Act
         kjørRegel(aktivitet, periode);
 
         // Assert
-        assertThat(arbeidMedBortfaltNatYtelsePrÅr.getNaturalytelseBortfaltPrÅr().get()).isEqualTo(BigDecimal.ZERO);
-        assertThat(arbeidMedBortfaltNatYtelsePrÅr.getFordeltPrÅr()).isEqualTo(BigDecimal.ZERO);
-        assertThat(aktivitet.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.valueOf(150_000));
+        assertThat(arbeidMedBortfaltNatYtelsePrÅr.getNaturalytelseBortfaltPrÅr().orElseThrow()).isEqualTo(BigDecimal.ZERO);
+        assertThat(arbeidMedBortfaltNatYtelsePrÅr.getFordeltPrÅr().orElseThrow()).isEqualTo(BigDecimal.ZERO);
+        assertThat(aktivitet.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.valueOf(150_000));
     }
 
 
     @Test
     public void skal_flytte_beregningsgrunnlag_fra_et_annet_arbeidsforhold() {
         // Arrange
-        BigDecimal refusjonskrav1 = BigDecimal.valueOf(200_000);
-        BigDecimal beregnetPrÅr1 = BigDecimal.valueOf(100_000);
-        BeregningsgrunnlagPrArbeidsforhold a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
+	    var refusjonskrav1 = BigDecimal.valueOf(200_000);
+	    var beregnetPrÅr1 = BigDecimal.valueOf(100_000);
+	    var a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
 
-        BigDecimal refusjonskrav2 = BigDecimal.ZERO;
-        BigDecimal beregnetPrÅr2 = BigDecimal.valueOf(100_000);
-        BeregningsgrunnlagPrArbeidsforhold a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
+	    var refusjonskrav2 = BigDecimal.ZERO;
+	    var beregnetPrÅr2 = BigDecimal.valueOf(100_000);
+	    var a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
 
-        BeregningsgrunnlagPrStatus atfl = lagATFL(List.of(a1, a2));
-
-        BeregningsgrunnlagPeriode periode = BeregningsgrunnlagPeriode.builder()
-            .medBeregningsgrunnlagPrStatus(atfl)
-            .medPeriode(Periode.of(STP, null))
-            .build();
+	    var periode = new FordelPeriodeModell(Periode.of(STP, null), Arrays.asList(a1, a2));
 
         // Act
         kjørRegel(a1, periode);
 
         // Assert
-        assertThat(a1.getFordeltPrÅr()).isEqualByComparingTo(refusjonskrav1);
-        assertThat(a2.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.ZERO);
+        assertThat(a1.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(refusjonskrav1);
+        assertThat(a2.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.ZERO);
     }
 
     @Test
     public void skal_flytte_deler_av_beregningsgrunnlag_fra_et_annet_arbeidsforhold() {
         // Arrange
-        BigDecimal refusjonskrav1 = BigDecimal.valueOf(200_000);
-        BigDecimal beregnetPrÅr1 = BigDecimal.valueOf(100_000);
-        BeregningsgrunnlagPrArbeidsforhold a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
+        var refusjonskrav1 = BigDecimal.valueOf(200_000);
+        var beregnetPrÅr1 = BigDecimal.valueOf(100_000);
+        var a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
 
-        BigDecimal refusjonskrav2 = BigDecimal.ZERO;
-        BigDecimal beregnetPrÅr2 = BigDecimal.valueOf(150_000);
-        BeregningsgrunnlagPrArbeidsforhold a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
+        var refusjonskrav2 = BigDecimal.ZERO;
+        var beregnetPrÅr2 = BigDecimal.valueOf(150_000);
+        var a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
 
-        BeregningsgrunnlagPrStatus atfl = lagATFL(List.of(a1, a2));
-
-        BeregningsgrunnlagPeriode periode = BeregningsgrunnlagPeriode.builder()
-            .medBeregningsgrunnlagPrStatus(atfl)
-            .medPeriode(Periode.of(STP, null))
-            .build();
+	    var periode = new FordelPeriodeModell(Periode.of(STP, null), Arrays.asList(a1, a2));
 
         // Act
         kjørRegel(a1, periode);
 
         // Assert
-        assertThat(a1.getFordeltPrÅr()).isEqualByComparingTo(refusjonskrav1);
-        assertThat(a2.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.valueOf(50_000));
+        assertThat(a1.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(refusjonskrav1);
+        assertThat(a2.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.valueOf(50_000));
     }
 
     @Test
     public void skal_flytte_beregningsgrunnlag_fra_to_arbeidsforhold() {
         // Arrange
-        BigDecimal refusjonskrav1 = BigDecimal.valueOf(300_000);
-        BigDecimal beregnetPrÅr1 = BigDecimal.valueOf(100_000);
-        BeregningsgrunnlagPrArbeidsforhold a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
+        var refusjonskrav1 = BigDecimal.valueOf(300_000);
+        var beregnetPrÅr1 = BigDecimal.valueOf(100_000);
+        var a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
 
-        BigDecimal refusjonskrav2 = BigDecimal.ZERO;
-        BigDecimal beregnetPrÅr2 = BigDecimal.valueOf(100_000);
-        BeregningsgrunnlagPrArbeidsforhold a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
+        var refusjonskrav2 = BigDecimal.ZERO;
+        var beregnetPrÅr2 = BigDecimal.valueOf(100_000);
+        var a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
 
-        BigDecimal refusjonskrav3 = BigDecimal.ZERO;
-        BigDecimal beregnetPrÅr3 = BigDecimal.valueOf(100_000);
-        BeregningsgrunnlagPrArbeidsforhold a3 = lagArbeidsforhold(refusjonskrav3, beregnetPrÅr3, 3L, ORGNR3);
+        var refusjonskrav3 = BigDecimal.ZERO;
+        var beregnetPrÅr3 = BigDecimal.valueOf(100_000);
+        var a3 = lagArbeidsforhold(refusjonskrav3, beregnetPrÅr3, 3L, ORGNR3);
 
-        BeregningsgrunnlagPrStatus atfl = lagATFL(List.of(a1, a2, a3));
+	    var periode = new FordelPeriodeModell(Periode.of(STP, null), Arrays.asList(a1, a2, a3));
 
-        BeregningsgrunnlagPeriode periode = BeregningsgrunnlagPeriode.builder()
-            .medBeregningsgrunnlagPrStatus(atfl)
-            .medPeriode(Periode.of(STP, null))
-            .build();
-
-        // Act
+	    // Act
         kjørRegel(a1, periode);
 
         // Assert
-        assertThat(a1.getFordeltPrÅr()).isEqualByComparingTo(refusjonskrav1);
-        assertThat(a2.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.ZERO);
-        assertThat(a3.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.ZERO);
+        assertThat(a1.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(refusjonskrav1);
+        assertThat(a2.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.ZERO);
+        assertThat(a3.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.ZERO);
     }
 
     @Test
     public void skal_kun_flytte_beregningsgrunnlag_fra_arbeidsforhold_som_har_lavere_refusjon_enn_beregningsgrunnlag() {
         // Arrange
-        BigDecimal refusjonskrav1 = BigDecimal.valueOf(300_000);
-        BigDecimal beregnetPrÅr1 = BigDecimal.valueOf(100_000);
-        BeregningsgrunnlagPrArbeidsforhold a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
+        var refusjonskrav1 = BigDecimal.valueOf(300_000);
+	    var beregnetPrÅr1 = BigDecimal.valueOf(100_000);
+	    var a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
 
-        BigDecimal refusjonskrav2 = BigDecimal.valueOf(100_000);
-        BigDecimal beregnetPrÅr2 = BigDecimal.valueOf(100_000);
-        BeregningsgrunnlagPrArbeidsforhold a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
+	    var refusjonskrav2 = BigDecimal.valueOf(100_000);
+	    var beregnetPrÅr2 = BigDecimal.valueOf(100_000);
+	    var a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
 
-        BigDecimal refusjonskrav3 = BigDecimal.ZERO;
-        BigDecimal beregnetPrÅr3 = BigDecimal.valueOf(100_000);
-        BeregningsgrunnlagPrArbeidsforhold a3 = lagArbeidsforhold(refusjonskrav3, beregnetPrÅr3, 3L, ORGNR3);
+	    var refusjonskrav3 = BigDecimal.ZERO;
+	    var beregnetPrÅr3 = BigDecimal.valueOf(100_000);
+	    var a3 = lagArbeidsforhold(refusjonskrav3, beregnetPrÅr3, 3L, ORGNR3);
 
-        BeregningsgrunnlagPrStatus atfl = lagATFL(List.of(a1, a2, a3));
+	    var periode = new FordelPeriodeModell(Periode.of(STP, null), Arrays.asList(a1, a2, a3));
 
-        BeregningsgrunnlagPeriode periode = BeregningsgrunnlagPeriode.builder()
-            .medBeregningsgrunnlagPrStatus(atfl)
-            .medPeriode(Periode.of(STP, null))
-            .build();
-
-        // Act
+	    // Act
         kjørRegel(a1, periode);
 
         // Assert
-        assertThat(a1.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.valueOf(200_000));
-        assertThat(a2.getFordeltPrÅr()).isNull();
-        assertThat(a2.getBruttoInkludertNaturalytelsePrÅr().get()).isEqualByComparingTo(beregnetPrÅr2);
-        assertThat(a3.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.ZERO);
+        assertThat(a1.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.valueOf(200_000));
+        assertThat(a2.getFordeltPrÅr()).isEmpty();
+        assertThat(a2.getBruttoInkludertNaturalytelsePrÅr().orElseThrow()).isEqualByComparingTo(beregnetPrÅr2);
+        assertThat(a3.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.ZERO);
     }
 
 
-    private BeregningsgrunnlagPrArbeidsforhold lagArbeidsforhold(BigDecimal refusjonskravPrÅr, BigDecimal beregnetPrÅr, Long andelsnr, String orgnr) {
-        return BeregningsgrunnlagPrArbeidsforhold.builder()
+    private FordelAndelModell lagArbeidsforhold(BigDecimal refusjonskravPrÅr, BigDecimal beregnetPrÅr, Long andelsnr, String orgnr) {
+        return FordelAndelModell.builder()
             .medAndelNr(andelsnr)
             .medInntektskategori(Inntektskategori.ARBEIDSTAKER)
+	        .medAktivitetStatus(AktivitetStatus.AT)
             .medArbeidsforhold(Arbeidsforhold.nyttArbeidsforholdHosVirksomhet(orgnr, null))
             .medGjeldendeRefusjonPrÅr(refusjonskravPrÅr)
-            .medBeregnetPrÅr(beregnetPrÅr)
+            .medForeslåttPrÅr(beregnetPrÅr)
             .build();
     }
 
-    private BeregningsgrunnlagPrStatus lagATFL(List<BeregningsgrunnlagPrArbeidsforhold> arbeidsforholdList) {
-        BeregningsgrunnlagPrStatus.Builder builder = BeregningsgrunnlagPrStatus.builder()
-            .medAktivitetStatus(AktivitetStatus.ATFL);
-        arbeidsforholdList.forEach(builder::medArbeidsforhold);
-        return builder.build();
-    }
-
-
-    private void kjørRegel(BeregningsgrunnlagPrArbeidsforhold arbeidsforhold, BeregningsgrunnlagPeriode periode) {
+    private void kjørRegel(FordelAndelModell arbeidsforhold, FordelPeriodeModell periode) {
         OmfordelFraArbeid regel = new OmfordelFraArbeid(arbeidsforhold);
         regel.evaluate(periode);
     }
